# -Chess

./: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessGame.cpp  ChessGame.h  Figure.cpp  Figure.h  Move.cpp  Move.h  README.md  codestyle.md  retrospective.md
Qt/: Qt.pro  cell.h  field.cpp  field.h  images.h  mainwindow.cpp  mainwindow.h
build-Qt-Desktop_Qt_5_12_6_GCC_64bit-Debug/: Makefile  Qt  moc_mainwindow.cpp  ui_mainwindow.h
build-Qt-Desktop_Qt_5_12_6_GCC_64bit-Release/: Makefile  Qt  moc_predefs.h
lib/stockfish-10/src/: stockfish
lib/stockfish-10/tests/: game.exp
src/Chess/ChessBoard/: ChessBoard.cpp  ChessBoard.h
src/Chess/ChessGame/: ChessGame.cpp  ChessGame.h
src/Chess/Figure/: Figure.cpp  Figure.h
src/Chess/Move/: Move.cpp  Move.h
src/Chess/MoveNotation/: MoveNotation.cpp  MoveNotation.h
src/Stockfish/: Stockfish.cpp  Stockfish.h  res.txt  test.sh
src/Stockfish/stockfish-script/: commands.txt  res.txt  script.sh
tests/: testChessGame.cpp  testMove.cpp  testMoveNotation.cpp  testStockfish.cpp
